// Copyright 2022 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.environment;
option go_package = "github.com/bucketeer-io/bucketeer/proto/environment";

message CreateEnvironmentCommand {
  string namespace = 1 [deprecated = true];
  string name = 2 [deprecated = true];
  string description = 3;  // optional
  string id = 4;
  string project_id = 5;
}

// deprecated
message RenameEnvironmentCommand {
  string name = 1;
}

message ChangeDescriptionEnvironmentCommand {
  string description = 1;
}

message DeleteEnvironmentCommand {}

message CreateProjectCommand {
  string id = 1;
  string description = 2;  // optional
}

message CreateTrialProjectCommand {
  string id = 1;
  string email = 2;
}

message ChangeDescriptionProjectCommand {
  string description = 1;
}

message EnableProjectCommand {}

message DisableProjectCommand {}

message ConvertTrialProjectCommand {}